--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -17,10 +17,12 @@
     "supertest": "^6.3.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.2.4"
+    "mongoose": "^7.2.4",
+    "mongoose-unique-validator": "^4.0.0"
   },
   "jest": {
     "testEnvironment": "node"
