--- a/part4/bloglist/package.json
+++ b/part4/bloglist/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
     "mongoose-unique-validator": "^4.0.0"
   },
